@@ -209,7 +209,7 @@ public final class CyclicEngine<
 	@SafeVarargs
 	public static <G extends Gene<?, G>, C extends Comparable<? super C>>
 	CyclicEngine<G, C> of(final EvolutionStreamable<G, C>... engines) {
-		return new CyclicEngine<>(Arrays.asList(engines));
+		return new CyclicEngine<>(List.of(engines));
 	}
 
 }
